#28962 fixed width and alignment

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Anywhere/Content/Styles/team-schedule.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/Anywhere/Content/Styles/team-schedule.css
@@ -200,3 +200,6 @@ sh
 	vertical-align: middle !important;
 }
 
+#date-picker {
+    width: 360px;
+}
